# mail-job-tracker

./: .gitignore  README.md  pyproject.toml  run.sh
src/: config.py  cron.py  inference.py  logger.py  mail.py  main.py  utils.py
src/services/: inference.py
